# screw_drive_unit_pico

./: .gitignore  .gitmodules  README.md  enviroment_setup.sh  pico.repos  screw_drive_unit_pico_blockdiagram  test.sh
imudata/: imu_capture.csv  imu_capture_accel.csv  imu_capture_gyro.csv  imu_data.txt  process_imu.py  serial_capture.py
screw_drive_unit_pico/: CMakeLists.txt  main.c  robot_config.h  robot_parameters.h
screw_drive_unit_pico/individual_parameters/asr_sdm_v1_001/unit_1/: robot_parameters.h
screw_drive_unit_pico/lib/Comm/: CMakeLists.txt  Comm.c  Comm.h  comm_test.c
screw_drive_unit_pico/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
screw_drive_unit_pico/lib/Controller/: CMakeLists.txt  Controller.c  Controller.h
screw_drive_unit_pico/lib/Dynamixel/: CMakeLists.txt  Dynamixel.c  Dynamixel.h
screw_drive_unit_pico/lib/ICM42688/: CMakeLists.txt  ICM42688.c  ICM42688.h
screw_drive_unit_pico/lib/IMU/: CMakeLists.txt  Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionAxes.h  FusionCalibration.h  FusionCompass.h  FusionConvention.h  FusionMath.h  FusionOffset.c
screw_drive_unit_pico/lib/MCP2515/: MCP2515.c  MCP2515.h
screw_drive_unit_pico/lib/Protocol/: CMakeLists.txt  Protocol.c  Protocol.h
screw_drive_unit_pico/lib/Uart/: comm.c  comm.h
screw_drive_unit_pico/lib/common/: CMakeLists.txt  common_utils.h  first_order_filter.c  first_order_filter.h  low_pass_filter.c  low_pass_filter.h  sensor_utils.h  sin_table.h
screw_drive_unit_pico/lib/config/: DEV_Config.c  dev_config.c  dev_config.h
screw_drive_unit_pico/lib/controller/: CMakeLists.txt  controller.c  controller.h
screw_drive_unit_pico/lib/dynamixel/: CMakeLists.txt  dynamixel.c  dynamixel.h
screw_drive_unit_pico/lib/icm42688/: CMakeLists.txt  icm42688.c  icm42688.h
screw_drive_unit_pico/lib/imu/: CMakeLists.txt  Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionAxes.h  FusionCalibration.h  FusionConvention.h  FusionMath.h  FusionOffset.c  FusionOffset.h  fusion_offset.c  fusion_offset.h
screw_drive_unit_pico/lib/mcp2515/: CMakeLists.txt  mcp2515.h
screw_drive_unit_pico/lib/protocol/: CMakeLists.txt  protocol.c  protocol.h
screw_drive_unit_pico_circuit/: Raspberry_Pi_Pico_W_SC0918.kicad_sym  screw_drive_unit_pico_circuit.kicad_pro  screw_drive_unit_pico_circuit.kicad_sch
screw_drive_unit_pico_code/: .clang-format  CMakeLists.txt  main.c  robot_config.h
screw_drive_unit_pico_code/lib/common/: README.md  first_order_filter.c  first_order_filter.h  math_utils.h
screw_drive_unit_pico_code/lib/config/: CMakeLists.txt  dev_config.c  dev_config.h
screw_drive_unit_pico_code/lib/controller/: CMakeLists.txt  controller.c  controller.h
screw_drive_unit_pico_code/lib/icm42688/: icm42688.h
screw_drive_unit_pico_code/lib/imu/: FusionAhrs.h  FusionCompass.c  FusionCompass.h
screw_drive_unit_pico_code/lib/mcp2515/: mcp2515.c  mcp2515.h
screw_drive_unit_pico_code/lib/protocol/: protocol.c  protocol.h
